# agent_sdlc

./: .agent-pipeline.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  PR_REVIEW_TEST.md  README.md  README_MAIN.md  REQUIREMENTS.md  TASKS.md  copilot_instructions.md  heartbeat.md  pipeline_context.md  pyproject.template.toml  pyproject.toml  requirements-dev.txt  requirements.txt  session.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
agent_sdlc/: __init__.py
docs/: CI_SECRETS.md  RELEASE.md  architecture.md  examples.md  getting-started.md  index.html  index.md  providers.md
scripts/: bootstrap.py  check_commit_msg.sh  init_project.py  pr_review_runner.py  run_agent_health.py  run_agent_review.py  run_diagram.py  run_issue_linker.py  run_issue_refinement.py  run_new_agent.py  run_pipeline.py  run_pr_review.py  run_process_gap.py  run_product_owner.py  run_prompt_review.py  run_reasoning_check.py  run_sprint_health.py  run_traceability.py  run_ui_design.py  run_ux.py
tests/: __init__.py  test_agent_health.py  test_agent_review.py  test_agent_review_system.py  test_anthropic_provider.py  test_conflict_resolver.py  test_coverage_units.py  test_db_adapter.py  test_diagram_agent.py  test_finding_aggregator.py  test_issue_linker.py  test_issue_refinement_agent.py  test_new_agent.py  test_openai_provider.py  test_pipeline_orchestrator.py  test_pr_review_agent.py  test_process_gap_agent.py  test_product_owner_agent.py  test_prompt_review_agent.py  (+7 more)
(+56 files in other folders)
